# mouseless

./: .gitignore  PLAN.md  README.md  test_ax.swift
Sources/Mouseless/: main.swift
windows/: Cargo.toml  README.md  build.rs
windows/resources/: resource.rc
windows/src/: accessibility.rs  common.rs  core.rs  free_mode.rs  input.rs  main.rs  main_window.rs  monitor.rs  mouse.rs  overlay.rs  preferences.rs  settings.rs  toast.rs  tray.rs
