[package]
name = "mouseless"
version = "0.1.1"
edition = "2021"
description = "Mouseless keyboard mouse controller - Windows port"
default-run = "mouseless"
build = "build.rs"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_UI_Controls",
    "Win32_System_SystemServices",
    "Win32_Graphics_Gdi",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "mouseless"
path = "src/main.rs"
